--- a/templates/turbo_typing/menu.html
+++ b/templates/turbo_typing/menu.html
@@ -1,7 +1,7 @@
 {% extends 'turbo_typing/base.html' %}
 {% load static %}
 {% block content %}
-<div class="main-board">
+<div class="main-board menu">
     <form method="get" class="language-form">
         <label for="language">Choose Language:</label>
         <select name="language" id="language" onchange="window.location='?language='+this.value;">
