Chore: rename templates folder

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'turbo_typing/base.html' %}
+{% extends 'typer/base.html' %}
 {% load static %}
 {% block content %}
 <div class="main-board auth-container">
