--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends 'turbo_typing/base.html' %}
+{% extends 'typer/base.html' %}
 {% block content %}
 <div class="main-board">
     <h2>Password Reset Sent</h2>
