--- a/templates/typer/base.html
+++ b/templates/typer/base.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Turbo Typing</title>
+    <title>Thunder Typer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'turbo_typing/css/style.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'turbo_typing/images/favicon.ico' %}">
+    <link href="{% static 'typer/css/style.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static 'typer/images/favicon.ico' %}">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        &copy; 2025 Turbo Typing. All rights reserved.
+        &copy; 2025 Thunder Typer. All rights reserved.
     </footer>
 </body>
 </html>
