--- a/templates/typer/results_page.html.html
+++ b/templates/typer/results_page.html.html
@@ -1,5 +1,5 @@
-:\Mohammed\projects\dev-projects\web_projects\turbo_typing\templates\turbo_typing\results_page.html -->
-{% extends 'turbo_typing/base.html' %}
+:\Mohammed\projects\dev-projects\web_projects\typer\templates\typer\results_page.html -->
+{% extends 'typer/base.html' %}
 {% load static %}
 {% block content %}
 <div class="main-board">
