--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends 'turbo_typing/base.html' %}
+{% extends 'typer/base.html' %}
 {% block content %}
 <div class="main-board auth-container">
     <h2>Register</h2>
