--- a/templates/turbo_typing/menu.html
+++ b/templates/turbo_typing/menu.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="main-board menu">
     <form method="get" class="language-form">
-        <label for="language">Choose Language:</label>
+        <label for="language">Language:</label>
         <select name="language" id="language" onchange="window.location='?language='+this.value;">
             {% for lang in languages %}
                 <option value="{{ lang.id }}" {% if lang.id == request.GET.language|default:languages.0.id %}selected{% endif %}>{{ lang.name }}</option>
