Style: Thunder Typer link in navbar

--- a/templates/typer/base.html
+++ b/templates/typer/base.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="{% url 'menu' %}">Home</a>
+            <a href="{% url 'menu' %}">Thunder Typer</a>
         </nav>
     </header>
     <main>
