--- a/templates/typer/base.html
+++ b/templates/typer/base.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="{% url 'menu' %}">Thunder Typer</a>
+            <a href="{% url 'menu' %}">
+                <img src="{% static 'typer/images/favicon.ico' %}">
+                Thunder Typer
+            </a>
         </nav>
     </header>
     <main>
