--- a/templates/typer/base.html
+++ b/templates/typer/base.html
@@ -18,7 +18,9 @@
         </nav>
     </header>
     <main>
+        <img src="{% static 'typer/images/thunder1.png' %}" class="thunder">
         {% block content %}{% endblock %}
+        <img src="{% static 'typer/images/thunder2.png' %}" class="thunder">
     </main>
     <footer>
         &copy; 2025 Thunder Typer. All rights reserved.
