--- a/static/typer/css/style.css
+++ b/static/typer/css/style.css
@@ -311,7 +311,7 @@ nav img
 
 .lessons-list {
     display: flex;
-    gap: 1em;
+    gap: 1.5em;
     flex-wrap: wrap;
     height: -webkit-fill-available;
     align-content: flex-start;
@@ -331,6 +331,10 @@ nav img
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07);
     transition: color 0.2s, background 0.2s, box-shadow 0.2s;
      /* 4 buttons per row, auto scale */
+}
+
+.lessons-list * .btn {
+    min-height: 20vh;
 }
 
 .btn:hover {
