--- a/static/typer/css/style.css
+++ b/static/typer/css/style.css
@@ -394,3 +394,21 @@ input[type="email"], input[type="password"], input[type="text"] {
     background: #23272b;
     color: #e0e0e0;
 }
+
+::-webkit-scrollbar {
+  width: 15px;             /* vertical scrollbar width */
+}
+
+::-webkit-scrollbar-track {
+  background: #000a;     
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0aa;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #fff;
+}
