--- a/static/typer/css/style.css
+++ b/static/typer/css/style.css
@@ -338,8 +338,7 @@ nav img
 }
 
 .btn:hover {
-    background: #fff;
-    color: darkcyan;
+    background: #077;
     box-shadow: 0 4px 16px rgba(26, 188, 156, 0.13);
 }
 
@@ -410,5 +409,5 @@ input[type="email"], input[type="password"], input[type="text"] {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #fff;
+  background-color: #077;
 }
