Chore: change copyright notice

--- a/templates/typer/base.html
+++ b/templates/typer/base.html
@@ -23,7 +23,7 @@
         <img src="{% static 'typer/images/thunder2.png' %}" class="thunder">
     </main>
     <footer>
-        &copy; 2025 Thunder Typer. All rights reserved.
+        &copy; 2025 Mohammed Ismail. All rights reserved.
     </footer>
 </body>
 </html>
